# api_automation_pytest

./: AUTHORS.rst  CHANGELOG.rst  Dockerfile  LICENSE.txt  README.md  README.rst  build.sh  docker-entrypoint.sh  pytest.ini  requirements.txt  setup.cfg  setup.py
api/common_tag_schema/: config.py  header.py  reports_to_slack.py  tag_schema_logging.py
api/common_tag_schema/payloads/: policy.json
api/common_tag_schema/policies/: client.py
tests/: conftest.py
tests/test_common_tag_schema/: test_filter.py  test_policies.py
