# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = common-tag-schema-api-automation
description = Add a short description here!
author = Basavaraj Lamani
author-email = baslama1@in.ibm.com
license =
url =
long-description = file: README.rst
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =api

# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires = pytest


[options.packages.find]
where = api
exclude =
    tests


[options.extras_require]
# Add here additional requirements for extra features, to install with:


[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = common_tag_schema.module:function


[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True


[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov common_tag_schema --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests


[aliases]
build = bdist_wheel
release = build upload


[bdist_wheel]
# Use this option if your package is pure-python
universal = 1


[build_sphinx]
source_dir = docs
build_dir = docs/_build


[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

